# my-site

./: .dockerignore  .env.example  .gitignore  Dockerfile.prod  Procfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
apps/common/: admin.py  models.py
apps/common/migrations/: 0001_initial.py  0002_skill.py  0003_alter_skill_options.py  0004_sociallink_icon.py  0005_skill_bg_color_skill_text_color_alter_skill_type.py  0006_alter_skill_bg_color.py
apps/contact/: admin.py  apps.py  models.py
apps/contact/migrations/: 0001_initial.py
apps/pages/: admin.py  forms.py  models.py  urls.py  views.py
apps/pages/migrations/: 0001_initial.py  0002_about.py  0003_home_social_links.py  0004_portfolio.py  0005_contact.py  0006_alter_portfolio_projects.py  0007_about_created_at_about_updated_at_contact_created_at_and_more.py
apps/pages/templates/pages/: _navigation.html  about.html  base_page.html  contact.html  index.html  portfolio.html
apps/projects/: admin.py  models.py
apps/projects/migrations/: 0001_initial.py  0002_project_skills.py  0003_alter_project_options_project_order.py
config/: env.py  settings.py  urls.py
static/css/: input.css
static/js/: color-preview.js
templates/: base.html
